
syntax = "proto3";

import "message.proto";

package bess.pb;

service SchedulerControl {
    // Set up a thread in the free threads pool on the machine, but not schedule it.
    rpc SetUpThread(SetUpThreadArg) returns (Status) {}

    // Remove the chain (a group of threads) from free threads pool and schedule it on a core.
    rpc AttachChain(AttachChainArg) returns (Status) {}

    // Migrate the chain from a core to another core.
    rpc MigrateChain(MigrateChainArg) returns (Status) {}

    // Remove the chain from a core and put it back to the free threads pool.
    rpc DetachChain(DetachChainArg) returns (Status) {}
}
